--- a/Units/Defectoscope/Defectoscope.vcxproj
+++ b/Units/Defectoscope/Defectoscope.vcxproj
@@ -220,6 +220,7 @@
     <ClCompile Include="Windows\MainWindowToolBar.cpp" />
     <ClCompile Include="Windows\ResultViewer.cpp" />
     <ClCompile Include="Windows\ScanWindow.cpp" />
+    <ClCompile Include="Windows\Test502\AsyncChannel.cpp" />
     <ClCompile Include="Windows\Test502\SignalViewer.cpp" />
     <ClCompile Include="Windows\Test502\Test502Window.cpp" />
     <ClCompile Include="Windows\Test502\TestThresholdDlg.cpp" />
