--- a/Units/Defectoscope/Defectoscope.vcxproj
+++ b/Units/Defectoscope/Defectoscope.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="Windows\ResultViewer.cpp" />
     <ClCompile Include="Windows\ScanWindow.cpp" />
     <ClCompile Include="Windows\Test502\AsyncChannel.cpp" />
+    <ClCompile Include="Windows\Test502\Digit502Channel.cpp" />
     <ClCompile Include="Windows\Test502\SignalViewer.cpp" />
     <ClCompile Include="Windows\Test502\Test502Window.cpp" />
     <ClCompile Include="Windows\Test502\TestThresholdDlg.cpp" />
