--- a/Units/Defectoscope/Defectoscope.vcxproj.filters
+++ b/Units/Defectoscope/Defectoscope.vcxproj.filters
@@ -573,6 +573,9 @@
     <ClCompile Include="Windows\Test502\AsyncChannel.cpp">
       <Filter>Windows\Test502</Filter>
     </ClCompile>
+    <ClCompile Include="Windows\Test502\Digit502Channel.cpp">
+      <Filter>Windows\Test502</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
